# EduAgentPrime

./: .gitignore  AGENTS.md  docker-compose.yml
.ai/algorithms/: lesson-plan-generation.md  teaching-plan-scheduling.md
.ai/api/: api-spec.md  data-models.md
.ai/architecture/: data-flow.md
.ai/requirements/: requirements.md
backend/: .dockerignore  Dockerfile  alembic.ini  docker-entrypoint.sh  fix_base_url.py  pyproject.toml  requirements.txt
backend/alembic/versions/: 0d3f7f1c9a01_create_users_table.py  20b1a6ad1896_add_ai_config_and_message_model.py  21fe841fe1b6_add_course_and_document_tables.py
backend/app/: __init__.py  ai_service.py  auth.py  database.py  docx_service.py  init_db.py  knowledge_service.py  lesson_plan_api.py  main.py  middleware.py  models.py  teaching_plan_api.py  teaching_plan_service.py
backend/app/routers/: documents_api.py
backend/app/utils/: paths.py
backend/templates/: 授课计划模板.docx  教案模板.docx  课程标准模板.docx
frontend/: .dockerignore  Dockerfile  nginx.conf  package-lock.json  package.json
frontend/config/: proxy.ts  routes.ts
frontend/docs/: request-utils.md
frontend/src/: App.tsx  requestErrorConfig.ts
frontend/src/components/GenerationProgress/: index.tsx
frontend/src/components/RightContent/: AvatarDropdown.tsx
frontend/src/locales/en-US/: menu.ts
frontend/src/locales/zh-CN/: menu.ts  pages.ts
frontend/src/pages/Course/: LessonPlanGenerate.tsx  TeachingPlanGenerate.tsx
frontend/src/pages/Paper/: index.tsx
frontend/src/pages/TestAI/: index.tsx
frontend/src/utils/: request.ts
(+13 files in other folders)
