[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend with JWT authentication"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.0",
    "passlib[bcrypt]==1.7.4",
    "openai>=2.16.0",
]
